--- a/boids/index.html
+++ b/boids/index.html
@@ -19,7 +19,7 @@
       return Math.sqrt((x1 - x0) * (x1 - x0) + (y1 - y0) * (y1 - y0));
     }
 
-    class Bird {
+    class Biont {
       constructor(x, y, vx, vy, id) {
         this.x = x;
         this.y = y;
@@ -62,10 +62,10 @@
       }
       // 集団の中心に向かって移動します
       center() {
-        Boids.forEach(bird => {
-          if (this.id !== bird.id) {
-            this.v1.x += bird.x;
-            this.v1.y += bird.y;
+        Boids.forEach(biont => {
+          if (this.id !== biont.id) {
+            this.v1.x += biont.x;
+            this.v1.y += biont.y;
           }
         });
         this.v1.x /= Boids.length - 1;
@@ -77,19 +77,19 @@
       // DIST_THRESHOLD内に仲間がいると避けます
       avoid() {
         const DIST_THRESHOLD = radius;
-        Boids.forEach(bird => {
-          if (dist(this.x, this.y, bird.x, bird.y) < DIST_THRESHOLD) {
-            this.v2.x -= bird.x - this.x;
-            this.v2.y -= bird.y - this.y;
+        Boids.forEach(biont => {
+          if (dist(this.x, this.y, biont.x, biont.y) < DIST_THRESHOLD) {
+            this.v2.x -= biont.x - this.x;
+            this.v2.y -= biont.y - this.y;
           }
         });
       }
       // 集団と同じ速度で動こうとします
       average() {
-        Boids.forEach(bird => {
-          if (this.id !== bird.id) {
-            this.v3.x += bird.vx;
-            this.v3.y += bird.vy;
+        Boids.forEach(biont => {
+          if (this.id !== biont.id) {
+            this.v3.x += biont.vx;
+            this.v3.y += biont.vy;
           }
         });
         this.v3.x /= Boids.length - 1;
@@ -101,14 +101,14 @@
 
     for (let i = 0; i < 30; i++) {
       Boids.push(
-        new Bird(200 + Math.random() * 200, 200 + Math.random() * 100, 2, 2, i)
+        new Biont(200 + Math.random() * 200, 200 + Math.random() * 100, 2, 2, i)
       );
     }
 
     function loop(timestamp) {
       context.clearRect(0, 0, canvas.width, canvas.height);
-      Boids.forEach(bird => {
-        bird.draw();
+      Boids.forEach(biont => {
+        biont.draw();
       });
       window.requestAnimationFrame(ts => loop(ts));
     }
