--- a/life-game/index.html
+++ b/life-game/index.html
@@ -23,6 +23,9 @@
     // 1行のセルの個数
     const rows = Math.floor(canvas.height / cellSize);
 
+    /**
+     * 初期設定を行う関数です
+     */
     function initCells() {
       context.fillStyle = "rgb(60, 60, 60)";
       context.fillRect(0, 0, canvas.width, canvas.height);
@@ -34,6 +37,7 @@
       }
       draw();
     }
+
     // セルの描画を実行
     function draw() {
       for (let col = 0; col < cols; col++) {
@@ -42,14 +46,24 @@
         }
       }
     }
-    // セルの描画を指定
+
+    /**
+     * セルの描画設定です
+     * @param x
+     * @param y
+     */
     function drawCell(x, y) {
       const state = cell[x][y];
       context.fillStyle = state === ALIVE ? "rgb(0,0,100)" : "rgb(255,255,255)";
       context.fillRect(x * cellSize, y * cellSize, cellSize - 1, cellSize - 1);
     }
 
-    // 周囲9マスのセルのうち、生存しているセルの数を返す関数
+    /**
+     * 周囲9マスのセルのうち、生存しているセルの数を返す関数です
+     * @param x
+     * @param y
+     * @returns {number}
+     */
     function checkAround(x, y) {
       let count = 0;
       for (let i = -1; i <= 1; i++) {
@@ -68,17 +82,19 @@
       return count;
     }
 
-    // ループごとにセルの状態を変える関数
+    /**
+     * セルの状態を更新する関数です
+     */
     function proceed() {
       for (let col = 0; col < cols; col++) {
         for (let row = 0; row < rows; row++) {
           // 周りの生存セルの数を取得
-          let count = checkAround(col, row);
-          let currentState = cell[col][row];
+          const count = checkAround(col, row);
+          const currentState = cell[col][row];
           let nextState = DEATH;
           // 生存時に周りに2体いるときは維持
           if (count === 2) {
-            nextState = currentState ? ALIVE : DEATH;
+            nextState = currentState === ALIVE ? ALIVE : DEATH;
           }
           // 周りに3体いるときは誕生または維持
           if (count === 3) nextState = ALIVE;
@@ -91,6 +107,7 @@
     initCells();
     // 100ミリ秒ごとにproceed関数を実行
     let timer1 = setInterval(proceed, 100);
+
 
   </script>
 </body>
