--- a/genetic-algorithm/index.html
+++ b/genetic-algorithm/index.html
@@ -39,7 +39,8 @@
             score++;
           }
         }
-        return score / genomeSize;
+        console.log(this.genome.length)
+        return score / this.genome.length;
       }
 
       // genomeの要素を足し合わせ、合計の数値を返します
