--- a/life-game/index.html
+++ b/life-game/index.html
@@ -38,7 +38,9 @@
       draw();
     }
 
-    // セルの描画を実行
+    /**
+     * セルの描画を実行します
+     */
     function draw() {
       for (let col = 0; col < cols; col++) {
         for (let row = 0; row < rows; row++) {
