--- a/genetic-algorithm/index.html
+++ b/genetic-algorithm/index.html
@@ -42,7 +42,6 @@
             score++;
           }
         }
-        console.log(this.genome.length)
         return score / this.genome.length;
       }
 
@@ -123,7 +122,7 @@
      * @param genomeMutationRateRate：個々の遺伝子の変異確率です
      */
     function mutation(age, individualMutationRate, genomeMutationRateRate) {
-      let Boids = [];
+      const boids = [];
       age.forEach(biont => {
         // 確率的に変異させる個体を選別します
         if (individualMutationRate > Math.random()) {
@@ -137,12 +136,12 @@
             }
           });
           biont.setGenome(mutatedGenome);
-          Boids.push(biont);
+          boids.push(biont);
         } else {
-          Boids.push(biont);
+          boids.push(biont);
         }
       });
-      return Boids;
+      return boids;
     }
 
     /**
