--- a/genetic-algorithm/index.html
+++ b/genetic-algorithm/index.html
@@ -20,7 +20,7 @@
     let currentAge = [];
     let newAge = [];
 
-    const INDIVISUAL_MUTATION = 0.05;
+    const INDIVIDUAL_MUTATION = 0.05;
     const GENOME_MUTATION = 0.05;
 
     let goal = [];
